Fixed text formatting and spacing with required br tag

--- a/rich-message-plugin/CustomEvents_AddButtons_Stylesheet.css
+++ b/rich-message-plugin/CustomEvents_AddButtons_Stylesheet.css
@@ -487,6 +487,7 @@ p {
   min-height: 21px;
   display: flex;
   align-items: center;
+  white-space: break-spaces;
 }
 
 .buttons-wrapper {
